--- a/library_backend/package.json
+++ b/library_backend/package.json
@@ -13,7 +13,9 @@
     "bcrypt": "^5.0.1",
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.15",
     "utils": "^0.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
