--- a/library_backend/package.json
+++ b/library_backend/package.json
@@ -10,10 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.0",
-    "jsonwebtoken": "^8.5.1",
-    "utils": "^0.3.1"
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
