--- a/library_frontend/package.json
+++ b/library_frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "cdbreact": "^1.5.1",
     "mdb-react-ui-kit": "^3.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
