--- a/library_frontend/package.json
+++ b/library_frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "cdbreact": "^1.5.1",
+    "firebase": "^9.8.1",
     "formik": "^2.2.9",
     "mdb-react-ui-kit": "^3.0.0",
     "react": "^18.1.0",
