--- a/library_frontend/package.json
+++ b/library_frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
+    "reactstrap": "^9.0.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
