--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "create-react-app": "^5.0.1",
+    "react-star-rating-lite": "^0.0.11",
     "react-star-ratings": "^2.3.0"
   }
 }
