--- a/library_frontend/package.json
+++ b/library_frontend/package.json
@@ -25,6 +25,7 @@
     "react-simple-star-rating": "^4.0.5",
     "react-star-rating-lite": "^0.0.11",
     "react-star-ratings": "^2.3.0",
+    "react-stars": "^2.2.5",
     "reactstrap": "^9.0.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
