--- a/admin_frontend/package.json
+++ b/admin_frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^18.1.0",
