--- a/admin_frontend/package.json
+++ b/admin_frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
     "joi": "^17.6.0",
+    "joi-password": "^3.0.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^18.1.0",
