--- a/library_backend/package.json
+++ b/library_backend/package.json
@@ -14,8 +14,10 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "generate-password": "^1.7.0",
+    "joi-password": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "nodemailer": "^6.7.5"
